forth/test/fail/test_dot_call_plain_intrin_alloca.af
\ Must fail to compile.
fun: test_dot_call_plain_intrin_alloca_fail { -- err }
  1 alloca { ptr }
end
